--- a/index.html
+++ b/index.html
@@ -1,76 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
     <title>Passphrase Generator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        .container {
-            margin: 0 auto;
-            max-width: 500px;
-            padding: 20px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4CAF50;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .output {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #f5f5f5;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Passphrase Generator</h1>
-        <label for="keyword">Keyword:</label>
-        <input type="text" id="keyword">
-        <br>
-        <button onclick="generatePassphrase()">Generate Passphrase</button>
-        <div class="output">
-            <pre id="passphrase"></pre>
-        </div>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <h1>Passphrase Generator</h1>
+    <div>
+      <label for="num_words">Number of Words:</label>
+      <input type="number" id="num_words" min="1" max="10" value="3">
     </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
-    <style>
-        /* CSS styles remain unchanged */
-    </style>
-</head>
-<body>
-    <!-- Rest of the HTML code remains unchanged -->
-    <script>
-        // JavaScript code remains unchanged
-    </script>
-</body>
+    <div>
+      <label for="separator">Separator:</label>
+      <input type="text" id="separator" value="-">
+    </div>
+    <button id="generateButton">Generate Passphrase</button>
+    <div id="passphraseContainer" style="display: none;">
+      <h2>Your Passphrase:</h2>
+      <p id="passphrase"></p>
+    </div>
+  </body>
 </html>
