--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
       <h2>Your Passphrase:</h2>
       <p id="passphrase"></p>
     </div>
+    <div id="generatedPassword" style="display: none;">
+      <h2>Generated Password:</h2>
+      <p id="password"></p>
+    </div>
   </body>
 </html>
