--- a/index.html
+++ b/index.html
@@ -3,51 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Browser Audio Capture</title>
+    <title>MyChan</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        #threads {
+            margin-bottom: 20px;
+        }
+
+        #post-form {
+            background-color: #f4f4f4;
+            padding: 20px;
+        }
+
+        textarea {
+            width: 100%;
+            height: 100px;
+            margin-bottom: 10px;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <button id="startButton">Start Recording</button>
-    <button id="stopButton" disabled>Stop Recording</button>
-    
+    <header>
+        <h1>Welcome to MyChan</h1>
+    </header>
+    <main>
+        <section id="threads">
+            <!-- Thread display goes here -->
+        </section>
+        <section id="post-form">
+            <h2>Create a Post</h2>
+            <textarea id="post-content" placeholder="Write your post here..."></textarea>
+            <button id="submit-post">Submit Post ($20)</button>
+        </section>
+    </main>
+
+    <!-- PayPal Checkout script -->
+    <script src="https://www.paypal.com/sdk/js?client-id=BAAKgUlIB3dYgl6KSQ8v3F1qLQQs39m1v_8kKAdt1qDs2GQpeZ5XKbeYl2pfWECwjVBIsS0dbs71qmNJkE&currency=USD"></script>
     <script>
-        let mediaRecorder;
-        let recordedChunks = [];
+        document.addEventListener("DOMContentLoaded", function() {
+            const modal = document.getElementById("payment-modal");
+            const closeButton = document.querySelector(".close");
+            const payButton = document.getElementById("submit-post");
 
-        const startButton = document.getElementById('startButton');
-        const stopButton = document.getElementById('stopButton');
+            // Open payment modal when submit post button is clicked
+            payButton.addEventListener("click", function() {
+                modal.style.display = "block";
+            });
 
-        startButton.addEventListener('click', async () => {
-            const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-            mediaRecorder = new MediaRecorder(stream);
+            // Close modal when close button is clicked
+            closeButton.addEventListener("click", function() {
+                modal.style.display = "none";
+            });
 
-            mediaRecorder.ondataavailable = event => {
-                if (event.data.size > 0) {
-                    recordedChunks.push(event.data);
+            // Close modal when user clicks outside of it
+            window.addEventListener("click", function(event) {
+                if (event.target === modal) {
+                    modal.style.display = "none";
                 }
-            };
-
-            mediaRecorder.start();
-            startButton.disabled = true;
-            stopButton.disabled = false;
+            });
         });
 
-        stopButton.addEventListener('click', () => {
-            if (mediaRecorder.state !== 'inactive') {
-                mediaRecorder.stop();
-                startButton.disabled = false;
-                stopButton.disabled = true;
-            }
-        });
-
-        mediaRecorder.addEventListener('stop', () => {
-            const blob = new Blob(recordedChunks, { type: 'audio/wav' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'recorded_audio.wav';
-            a.textContent = 'Download Audio';
-            document.body.appendChild(a);
-        });
+        // Function to submit post (dummy function)
+        function submitPost() {
+            const postContent = document.getElementById("post-content").value;
+            // Dummy code to submit post
+            console.log("Post content:", postContent);
+            // You would implement the actual logic to submit the post to the server here
+            // For now, just log the post content
+        }
     </script>
+
+    <!-- Payment modal -->
+    <div id="payment-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Payment Checkout</h2>
+            <p>Pay $20 to submit your post.</p>
+            <a href="https://www.paypal.com/ncp/payment/KLRKVQLFCKPZA" target="_blank">
+                <img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/checkout-logo-large.png" alt="PayPal Checkout" />
+            </a>
+        </div>
+    </div>
 </body>
 </html>
